liquid-galaxy/gnu_linux/etc/iptables.conf
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [43616:6594412]
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
#-A INPUT -p tcp -m multiport --dports 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 10.42.0.0/16 -p udp -m udp --dport 161 -j ACCEPT
-A INPUT -s 10.42.0.0/16 -p udp -m udp --dport 3401 -j ACCEPT
#-A INPUT -p tcp -m multiport --dports 81,8111 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8111 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8112 -j ACCEPT
#-A INPUT -s 10.42.42.0/24 -p tcp -m multiport --dports 80,3128,3130 -j ACCEPT
-A INPUT -s 10.42.42.0/24 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 10.42.42.0/24 -p tcp -m tcp --dport 3128 -j ACCEPT
-A INPUT -s 10.42.42.0/24 -p tcp -m tcp --dport 3130 -j ACCEPT
#-A INPUT -s 10.42.42.0/24 -p udp -m multiport --dports 80,3128,3130 -j ACCEPT
-A INPUT -s 10.42.42.0/24 -p udp -m udp --dport 80 -j ACCEPT
-A INPUT -s 10.42.42.0/24 -p udp -m udp --dport 3128 -j ACCEPT
-A INPUT -s 10.42.42.0/24 -p udp -m udp --dport 3130 -j ACCEPT
#-A INPUT -s 10.42.42.0/24 -p tcp -m multiport --dports 9335 -j ACCEPT
-A INPUT -s 10.42.42.0/24 -p tcp -m tcp --dport 9335 -j ACCEPT
-A INPUT -s 10.42.42.0/24 -d 10.42.42.255/32 -p udp -j ACCEPT
-A INPUT -j DROP
-A FORWARD -j DROP
COMMIT
*nat
:PREROUTING ACCEPT [52902:8605309]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [358:22379]
:POSTROUTING ACCEPT [358:22379]
COMMIT
